packages/isar_plus_generator/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:isar_plus/isar.dart';

@collection
class Model {
  Id? id;

  late Set<String>? prop;
}
